--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
         <nav>
-            <h3 class="nav-tittle">G3 Architects</h3>
+            <h3 class="section-tittle">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -24,7 +24,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-tittle">Brand New Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration
                     in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
@@ -51,6 +51,50 @@
                 <button class="btn-primary">Explore More</button>
             </div>
 
+        </section>
+        <section class="features">
+
+        </section>
+        <section class="facts">
+            <h3 class="section-tittle">Some Facts</h3>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered
+                alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="card-stats">54</h3>
+                    <p class="card-tittle ">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="card-stats">1458</h3>
+                    <p class="card-tittle ">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="card-stats">590</h3>
+                    <p class="card-tittle ">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="card-stats">22578</h3>
+                    <p class="card-tittle ">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <section class="sponsors">
+            <h3 class="section-tittle">Our Sponspors</h3>
+            <p class="descriptions">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered
+                alteration.</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
         </section>
 
     </main>
