--- a/index.html
+++ b/index.html
@@ -53,7 +53,45 @@
 
         </section>
         <section class="features">
+            <div class="features-content">
+                <h3 class="section-tittle">Features you will love & enjoy</h3>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="card">
+                    <h4 class="card-tittle">Dexktop & Mobile Version</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-tittle">Dexktop & Mobile Version</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-tittle">Dexktop & Mobile Version</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-tittle">Dexktop & Mobile Version</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised..........</p>
+                </div>
 
+
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h3>10+ years</h3>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <section class="facts">
             <h3 class="section-tittle">Some Facts</h3>
